changed the row gap / fixed in on anime bpshow

--- a/AniBuy/js/custom-grid.css
+++ b/AniBuy/js/custom-grid.css
@@ -89,6 +89,7 @@ body {
         display: grid;
         grid-gap: 12px;
         position: relative;
+        grid-row-gap: 17px;
     }
 
     .breakpoint-1, .breakpoint-2, .bpshow{
@@ -312,12 +313,14 @@ h2.featured-heading-3 > a:hover{
 .home-page-anime-row-1 {
     grid-template-columns: 1fr 1fr 43.897%;
     grid-template-rows: 1fr 1fr 1fr;
-
+    margin: 0!important;
 
 }
 
+
+
 .home-page-pop-manga-row-1,.home-page-anime-row-1, .home-page-best-anime-row-1, .home-page-best-anime-row-2, .home-page-action-anime-row-1, .home-page-romance-anime-row-1, .home-page-fantasy-anime-row-1, .home-page-comedy-anime-row-1{
-        margin: 0 0 12px 0;
+        margin: 0 0 17px 0;
 }
 .home-page-anime-row-2, .home-page-season-anime-row-1, .home-page-best-anime-row-2, .home-page-action-anime-row-1, .home-page-romance-anime-row-1, .home-page-fantasy-anime-row-1, .home-page-comedy-anime-row-1{
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -362,17 +365,12 @@ h2.featured-heading-3 > a:hover{
     grid-row: 1 / 4;
 }
 
-.grid-row-11{
-    grid-column: 1/3;
-    grid-row: 1;
-}
-
 .grid-col-6{
     position: absolute;
     grid-row: 2;
     grid-column: 3;
     left: -11px;
-    top: -11px;
+    top: -16px;
 }
 
 .grid-col-7{
@@ -380,7 +378,7 @@ h2.featured-heading-3 > a:hover{
     grid-row: 3;
     grid-column: 3;
     left: -11px;
-    top: -11px;
+    top: -16px;
 }
 
 
@@ -391,7 +389,17 @@ h2.featured-heading-3 > a:hover{
     left: -11px;
     top: 1px;
 }
+.home-page-anime{
+    grid-row-gap: 17px
+}
+.grid-row-11, .grid-row-12, .grid-row-13{
+    height: 100%;
+}
 
+.grid-row-11{
+    grid-column: 1/3;
+    grid-row: 1;
+}
 
 .grid-row-12{
     grid-column: 1/3;
